new changes for RTMP

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,13 +1,6 @@
 {
-    "platforms": ["apple", "android"],
-    "coreFeatures": ["swiftui", "compose"],
-    "apple": {
-      "modules": ["RTMPModule"]
-    },
-    "android": {
-      "modules": [
-        "expo.modules.rtmp.RTMPModule"
-      ]
+    "platforms": ["apple","android"],
+    "coreFeatures": ["swift","compose"],
+    "apple": { "modules": ["RTMPModule"] },
+    "android": { "modules": ["expo.modules.rtmp.RTMPModule"] }
     }
-  }
-  
