--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "extends": "expo-module-scripts/tsconfig.base",
     "compilerOptions": {
-      "outDir": "./build"
+      "outDir": "./build",
+      "jsx":"react-jsx"
     },
+   
     "include": ["./src"],
     "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__rsc_tests__/*"]
   }
